--- a/frontend/src/app/pages/home-page/workspace-card/workspace-card.component.html
+++ b/frontend/src/app/pages/home-page/workspace-card/workspace-card.component.html
@@ -26,7 +26,7 @@
 <div class="flex flex-col gap-4 sm:gap-8 sm:py-3">
   <div class="grid grid-cols-1 items-start gap-4 sm:grid-cols-[7fr_1.94fr] sm:gap-12">
     <div>
-      <h4 class="mb-3 text-[32px] font-semibold">{{ workspace().name }}</h4>
+      <h4 class="mb-3 text-2xl font-semibold sm:text-[32px]">{{ workspace().name }}</h4>
       <p class="leading-[1.5] text-(--gray-color)">{{ workspace().description }}</p>
     </div>
     <a
