--- a/frontend/src/app/pages/my-bookings/booking-card/booking-card.component.css
+++ b/frontend/src/app/pages/my-bookings/booking-card/booking-card.component.css
@@ -5,9 +5,9 @@
 }
 
 .available {
-  @apply flex items-center gap-4 text-xl font-medium;
+  @apply flex flex-wrap items-center gap-1 text-base font-medium sm:gap-4 sm:text-lg;
 }
 
 .icon {
-  @apply inline-flex h-11 w-11 items-center justify-center rounded-xl bg-(--gray-color-100) text-lg text-(--primary-color);
+  @apply inline-flex h-7 w-7 items-center justify-center rounded-lg bg-(--gray-color-100) text-base text-(--primary-color) sm:h-11 sm:w-11 sm:rounded-xl sm:text-lg;
 }
