--- a/frontend/src/app/shared/components/form-control/form-control.component.html
+++ b/frontend/src/app/shared/components/form-control/form-control.component.html
@@ -4,7 +4,7 @@
   <div class="flex flex-col text-(--danger-color) {{ errorClass() }}">
     @for (error of errorMessages; track error.code) {
       @if (control?.hasError(error.code)) {
-        <span>{{ error.message }}</span>
+        <span>{{ error.message | interpolate: control?.getError(error.code) }}</span>
       }
     }
   </div>
