feat(frontend): button loading

--- a/frontend/src/app/pages/booking-edit-page/booking-edit-page.component.html
+++ b/frontend/src/app/pages/booking-edit-page/booking-edit-page.component.html
@@ -12,6 +12,7 @@
           appButton
           type="submit"
           [disabled]="bookingForm.form.invalid"
+          [loading]="isUpdateBookedWorkspaceLoading()"
         >
           Save changes
         </button>
