--- a/frontend/src/app/pages/my-bookings/my-bookings.component.html
+++ b/frontend/src/app/pages/my-bookings/my-bookings.component.html
@@ -12,6 +12,7 @@
     </div>
 
     <app-cancel-confirm-modal
+      [loading]="isCancelLoading()"
       [visible]="bookingIdToCancel()"
       (cancel)="onCancel()"
       (close)="cancelModalClose()"
