--- a/frontend/src/app/pages/booking-page/booking-page.component.html
+++ b/frontend/src/app/pages/booking-page/booking-page.component.html
@@ -14,6 +14,7 @@
       class="w-full"
       type="submit"
       [disabled]="bookingForm.form.invalid"
+      [loading]="isBookWorkspaceLoading()"
     >
       Submit
     </button>
