--- a/frontend/src/app/pages/booking-edit-page/booking-edit-page.component.html
+++ b/frontend/src/app/pages/booking-edit-page/booking-edit-page.component.html
@@ -37,5 +37,5 @@
 
   <app-submit-error-modal [(visible)]="showSubmitErrorModal" />
 } @else {
-  <p>Loading ...</p>
+  <app-spinner tip="Loading ..." />
 }
