--- a/frontend/src/styles/variables.css
+++ b/frontend/src/styles/variables.css
@@ -6,6 +6,7 @@
   --gray-color: #6b6b6b;
 
   --gray-color-100: #f5f3fb;
+  --gray-bg-100: #f7f6f9;
 
   --success-bg-200: #eaf7ee;
   --success-bg-500: #73c189;
